Adding get updates source with Watermarking capability

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mulesoft.connectors</groupId>
     <artifactId>mule-telegram-connector</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.3</version>
     <packaging>mule-extension</packaging>
     <name>Telegram</name>
 
@@ -23,6 +23,7 @@
         <muleCoreVersion>4.1.1</muleCoreVersion>
         <schedulerServiceVersion>1.1.2</schedulerServiceVersion>
         <javaxWsRsApiVersion>2.1</javaxWsRsApiVersion>
+        <orgJsonVersion>20190722</orgJsonVersion>
     </properties>
 
 
@@ -63,6 +64,11 @@
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
             <version>${javaxWsRsApiVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${orgJsonVersion}</version>
         </dependency>
     </dependencies>
 </project>
